--- a/cmd/geolocation-api/Dockerfile
+++ b/cmd/geolocation-api/Dockerfile
@@ -1,11 +1,8 @@
 FROM golang:1.16
+EXPOSE 8080
 
-WORKDIR /app
-COPY go.mod go.sum ./
-RUN go mod download
-COPY . .
-COPY pkg .
-WORKDIR /app
-RUN ls -a
-RUN go  build -o app ./cmd/geolocation-api
-CMD ["/app"]
+RUN mkdir geolocation
+COPY . /geolocation
+WORKDIR /geolocation/cmd/geolocation-api
+RUN go build -o /app .
+ENTRYPOINT ["/app"]
