--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.5'
 services:
   db:
     image: postgres
@@ -5,6 +6,49 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=test
-      - POSTGRES_DB=geolocation
+      - POSTGRES_DB=geolocations
     ports:
       - "5432:5432"
+    networks:
+      - default
+
+  geolocation-api:
+    build:
+      context: .
+      dockerfile: cmd/geolocation-api/Dockerfile
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=test
+      - POSTGRES_DB=geolocations
+      - POSTGRES_HOST=172.20.0.2
+      - POSTGRES_PORT=5432
+      - API_PORT=8080
+    ports:
+      - 8080:8080
+    depends_on:
+      - db
+    networks:
+      - default
+    restart: on-failure
+
+  importer-task:
+    build:
+      context: .
+      dockerfile: cmd/importer/Dockerfile
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=test
+      - POSTGRES_DB=geolocations
+      - POSTGRES_HOST=172.20.0.2
+      - POSTGRES_PORT=5432
+    depends_on:
+      - db
+    volumes:
+      - ./:/usr/src/app
+    networks:
+      - default
+    restart: on-failure
+
+networks:
+  default:
+    name: geolocations
