--- a/.github/workflows/cicd_workflow.yml
+++ b/.github/workflows/cicd_workflow.yml
@@ -24,8 +24,8 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Test
-    #run tests
-    - run: |-
+      #run tests
+      run: |-
         go test ./...
 
     # Setup gcloud CLI
