--- a/.github/workflows/cicd_workflow.yml
+++ b/.github/workflows/cicd_workflow.yml
@@ -65,8 +65,9 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
+        cd deployment/geolocation-api/
         ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE_GEOLOCATION_API:$GITHUB_SHA
-        ./kustomize build deployment/geolocation-api/kustomization.yml | kubectl apply -f -
+        ./kustomize build . | kubectl apply -f -
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
 
@@ -77,6 +78,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Test
+        run: |-
+          go test ./...
 
       # Setup gcloud CLI
       - uses: google-github-actions/setup-gcloud@v0.2.0
@@ -115,5 +120,6 @@ jobs:
       # Deploy the Docker image to the GKE cluster
       - name: Deploy
         run: |-
+          cd deployment/importer-task/
           ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE_IMPORTER_TASK:$GITHUB_SHA
-          ./kustomize build deployment/importer-task/kustomization.yml | kubectl apply -f -
+          ./kustomize build . | kubectl apply -f -
