--- a/.github/workflows/cicd_workflow.yml
+++ b/.github/workflows/cicd_workflow.yml
@@ -62,6 +62,7 @@ jobs:
       run: |-
         curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
         chmod u+x ./kustomize
+        mv kustomize deployment/geolocation-api/
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
@@ -117,6 +118,7 @@ jobs:
         run: |-
           curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
           chmod u+x ./kustomize
+          mv kustomize deployment/importer-task/
       # Deploy the Docker image to the GKE cluster
       - name: Deploy
         run: |-
