--- a/deployment/geolocation-api/geolocation-api-deployment.yml
+++ b/deployment/geolocation-api/geolocation-api-deployment.yml
@@ -26,7 +26,7 @@ spec:
             memory: "128Mi"
             cpu: "500m"
         ports:
-        - containerPort: 8080
+          - containerPort: 8080
         env:
           - name: POSTGRES_HOST
               valueFrom:
@@ -46,10 +46,10 @@ spec:
           - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
-                  name: mysecret
+                  name: geolocation-secrets
                   key: username
           - name: POSTGRES_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: mysecret
+                name: geolocation-secrets
                 key: password
