--- a/deployment/importer-task/importer-deployment.yml
+++ b/deployment/importer-task/importer-deployment.yml
@@ -50,3 +50,4 @@ spec:
             - name: datadump
               persistentVolumeClaim:
                 claimName: importer-claim
+          restartPolicy: OnFailure
