set restartPolicy back to onfailure

--- a/deployment/importer-task/importer-deployment.yml
+++ b/deployment/importer-task/importer-deployment.yml
@@ -55,8 +55,8 @@ spec:
                     secretKeyRef:
                       name: geolocation-secrets
                       key: postgres_password
+          restartPolicy: OnFailure
 #          volumes:
 #            - name: datadump
 #              persistentVolumeClaim:
 #                claimName: importer-claim
-#          restartPolicy: OnFailure
