--- a/cmd/importer/Dockerfile
+++ b/cmd/importer/Dockerfile
@@ -9,5 +9,5 @@ RUN mkdir importer
 COPY . /importer
 WORKDIR /importer/cmd/importer
 RUN go build -o ./app/importer .
-ENTRYPOINT ["./app/importer"]
-CMD ["/tmp/data/data_dump.csv"]
+#ENTRYPOINT ["./app/importer"]
+#CMD ["/tmp/data/data_dump.csv"]
