--- a/deployment/importer-task/kustomization.yml
+++ b/deployment/importer-task/kustomization.yml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 #- volume-claim.yml
-- importer-deployment.yml
+- importer-cronjob.yml
