--- a/deployment/importer-task/importer-cronjob.yml
+++ b/deployment/importer-task/importer-cronjob.yml
@@ -44,6 +44,11 @@ spec:
                     configMapKeyRef:
                       name: geolocation-config
                       key: postgres_port
+                - name: POSTGRES_DB
+                    valueFrom:
+                      configMapKeyRef:
+                        name: geolocation-config
+                        key: postgres_db
                 - name: POSTGRES_USER
                   valueFrom:
                     secretKeyRef:
