execute importer comand only after bucket is mounted

--- a/deployment/importer-task/importer-cronjob.yml
+++ b/deployment/importer-task/importer-cronjob.yml
@@ -20,7 +20,7 @@ spec:
               lifecycle:
                 postStart:
                   exec:
-                    command: [ "gcsfuse", "-o", "nonempty", "geolocation-importer-data", "/tmp/data" ]
+                    command: [ "gcsfuse", "-o", "nonempty", "geolocation-importer-data", "/tmp/data", "&&", "./app/importer", "/tmp/data/data_dump.csv" ]
                 preStop:
                   exec:
                     command: [ "fusermount", "-u", "/tmp/data" ]
@@ -59,7 +59,6 @@ spec:
                     secretKeyRef:
                       name: geolocation-secrets
                       key: postgres_password
-              command: [ "./app/importer", "/tmp/data/data_dump.csv" ]
           restartPolicy: OnFailure
 #          volumes:
 #            - name: datadump
