removed static container from deployment

--- a/deployment/importer-task/importer-cronjob.yml
+++ b/deployment/importer-task/importer-cronjob.yml
@@ -11,7 +11,7 @@ spec:
         spec:
           containers:
             - name: importer-task
-              image: gcr.io/gcp-playground-project/importer-task@sha256:210e297abca4c6d97eb8470a2bf13974bff92cfaf63bfd9c75f5c9d1558663a5
+              image: gcr.io/PROJECT_ID/IMAGE:TAG
               securityContext:
                 privileged: true
                 capabilities:
