--- a/deployment/importer-task/importer-cronjob.yml
+++ b/deployment/importer-task/importer-cronjob.yml
@@ -26,10 +26,10 @@ spec:
                     command: [ "fusermount", "-u", "/tmp/data" ]
               resources:
                 requests:
-                  memory: "64Mi"
+                  memory: "300m"
                   cpu: "100m"
                 limits:
-                  memory: "128Mi"
+                  memory: "500Mi"
                   cpu: "500m"
               ports:
                 - containerPort: 8080
