--- a/deployment/importer-task/importer-cronjob.yml
+++ b/deployment/importer-task/importer-cronjob.yml
@@ -4,7 +4,7 @@ metadata:
   name: importer
   namespace: geolocation
 spec:
-  schedule: "*/30 * * * *"
+  schedule: "* * 1 * *"
   jobTemplate:
     spec:
       template:
