--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=test
       - POSTGRES_DB=geolocations
-      - POSTGRES_HOST=localhost
+      - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
       - API_PORT=8080
     ports:
@@ -39,12 +39,12 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=test
       - POSTGRES_DB=geolocations
-      - POSTGRES_HOST=localhost #172.20.0.2
+      - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
     depends_on:
       - db
     volumes:
-      - ./:/usr/src/app
+      - ./cmd/importer:/usr/src/app
     networks:
       - default
     restart: on-failure
